app-test/testdata/typesystem/neg/type-comparison-algebraic-type/check/cmp.check
Error in "testdata/typesystem/neg/type-comparison-algebraic-type/src/cmp.cal" on line 6:
            if T(1, false) != B(2.5) then // error
               ^^^^^^^^^^^^^^^^^^^^^
Incomparable types; T cannot be compared with U.